k8s-yaml/dashboard/TraefikIngress2.0-v1.19.0+.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect
  namespace: kubernetes-dashboard
spec:
  redirectScheme:
    scheme: https
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    k8s-app: kubernetes-dashboard
  name: kubernetes-dashboard
  namespace: kubernetes-dashboard
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  rules:
  - host: dashboard.tycng.com
    http:
      paths:
        - pathType: ImplementationSpecific
          path: /        
          backend:
            service:
              name: kubernetes-dashboard
              port: 
                number: 443
  tls:
   - secretName: default
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    k8s-app: kubernetes-dashboard
  name: kubernetes-dashboard-web
  namespace: kubernetes-dashboard
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: kubernetes-dashboard-redirect@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
  - host: dashboard.tycng.com
    http:
      paths:
        - pathType: ImplementationSpecific
          path: /        
          backend:
            service:
              name: kubernetes-dashboard
              port: 
                number: 443
