k8s-yaml/dashboard/nginx-dashboard-Ingress-v1.19.0+.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/use-regex: "true"
  labels:
    k8s-app: kubernetes-dashboard
  name: kubernetes-dashboard
  namespace: kubernetes-dashboard
spec:
  ingressClassName: nginx
  rules:
  - host: dashboard.tycng.com
    http:
      paths:
        - pathType: ImplementationSpecific
          path: /        
          backend:
            service:
              name: kubernetes-dashboard
              port: 
                number: 443
  tls:
  - secretName: default
  #- secretName: dashboard-tls-cert
